Project 2: try/catch requirements implemented for all routes. OAuth integrated/successful login and authorization
